# ALSparse

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
arm/: CMakeLists.txt
arm/format/: CMakeLists.txt  alphasparse_convert_csr.cpp  alphasparse_transpose.cpp  convert_csr_coo.hpp  transpose_conj_c_csr.cpp  transpose_csr.hpp
arm/kernel/: CMakeLists.txt
arm/kernel/level2/: alphasparse_mv.cpp
arm/test/: CMakeLists.txt  check.cpp  norm.cpp  test_common.cpp
arm/test/include/: check.h  test.h
arm/test/level2/: mv_arm_test.cpp
arm/util/: analysis.cpp  internal_check.cpp  pack.cpp  partition.cpp  prefix_sum.cpp  thread.cpp
cuda/: CMakeLists.txt
cuda/format/: alphasparseXcsr2bsr.h  alphasparse_create_bell.h  alphasparse_create_coo.h  bell2coo.h  coo2bell.h  coo2csr.cu  coo2csr.h  csr2csc.h  transpose_csc.h  transpose_csr.h
cuda/kernel/extra/: alphasparse_csrgeam2.cu  alphasparse_csrgeam2.h
cuda/kernel/generic/: alphasparse_axpby.cu  alphasparse_gather.cu  alphasparse_rot.cu  alphasparse_scatter.cu  alphasparse_spvv.cu
cuda/kernel/level2/: alphasparse_bsrmv.cu  alphasparse_bsrmv.h  alphasparse_bsrsv2.cu  alphasparse_bsrsv2.h  alphasparse_bsrxmv.cu  alphasparse_bsrxmv.h  alphasparse_gemvi.cu  alphasparse_gemvi.h  alphasparse_spmv.cu  alphasparse_spmv_coo.h  alphasparse_spmv_coo_row_partition_ginkgo.h  alphasparse_spmv_csc.h  alphasparse_spmv_csr_adaptive.h  alphasparse_spmv_csr_adaptive2.h  alphasparse_spmv_csr_flat.h  alphasparse_spmv_csr_line_enhance.h  alphasparse_spmv_csr_merge.h  alphasparse_spmv_csr_merge_ginkgo.h  alphasparse_spmv_csr_row_partition.h  alphasparse_spmv_csr_row_partition_ginkgo.h  alphasparse_spmv_csr_scalar.h  alphasparse_spmv_csr_vector.h  alphasparse_spsv.cu  spsv_csr_n_lo.h  spsv_csr_n_up.h  spsv_csr_u_lo.h  spsv_csr_u_up.h
cuda/kernel/level3/: alphasparse_bsrmm.cu  alphasparse_bsrmm.h  alphasparse_bsrsm.cu  alphasparse_bsrsm_conj_trans.h  alphasparse_bsrsm_lo.h  alphasparse_bsrsm_up.h  alphasparse_csrmm.h  alphasparse_sddmm.cu  alphasparse_sddmm_csr_col.h  alphasparse_spgemm.cu  alphasparse_spgemm_ac_csr.h  alphasparse_spgemm_amgx_csr.h  alphasparse_spgemm_copy_csr.h  alphasparse_spgemm_csr.h  alphasparse_spgemm_csr_old.h  alphasparse_spgemm_csr_trunk.h  alphasparse_spgemm_fast_csr.h  alphasparse_spgemm_ia_csr.h  alphasparse_spgemm_nnz_csr.h  alphasparse_spgemm_nnz_csr_back.h  alphasparse_spgemm_ns_csr.h  alphasparse_spgemm_opsp_csr.h  alphasparse_spgemm_reuse.cu  alphasparse_spgemm_speck_csr.h  alphasparse_spmm.cu  alphasparse_spmm_bell.h  alphasparse_spmm_coo_col.h  alphasparse_spmm_csc.h  alphasparse_spmm_csr.h  alphasparse_spmm_csr_col.h  alphasparse_spmm_csr_row.h  alphasparse_spsm.cu  alphasparse_spsm_common.h  alphasparse_spsm_csr_n_hi.h  alphasparse_spsm_csr_u_lo.h  csrspgemm_device.h  csrspgemm_device_ac.h  csrspgemm_device_amgx.h  csrspgemm_device_fast.h  csrspgemm_device_ns.h  (+2 more)
cuda/kernel/precond/: alphasparse_bsric02.cu  alphasparse_bsric02.h  alphasparse_bsrilu02.cu  alphasparse_bsrilu02.h  alphasparse_csric02.cu  alphasparse_csric02.h  alphasparse_csrilu02.cu  alphasparse_csrilu02.h  alphasparse_gpsv.cu  alphasparse_gpsv.h  alphasparse_gtsv2.cu  alphasparse_gtsv2.h  alphasparse_gtsv2_interleaved_batch.cu  alphasparse_gtsv2_interleaved_batch.h  alphasparse_gtsv2_nopivot.cu  alphasparse_gtsv2_strided_batch.h  gtsv2_device.h  gtsv2_nopivot_device.h  gtsv_interleaved_batch_device.h
cuda/kernel/reordering/: alphasparse_csrcolor.cu  alphasparse_csrcolor.h
cuda/test/: CMakeLists.txt  args.cu  check_r.cu  test_common.h
cuda/test/generic/: axpby_c_f16_test.cu  axpby_r_bf16_test.cu  gather_c_f16_test.cu  gather_c_f64_test.cu  gather_r_bf16_test.cu  gather_r_f32_test.cu  rot_r_bf16_test.cu  rot_r_f16_test.cu  scatter_c_bf16_test.cu  scatter_r_bf16_test.cu  scatter_r_f16_test.cu  scatter_r_f32_test.cu  spvv_c_f32_test.cu  spvv_c_f64_test.cu  spvv_r_f32_test.cu
cuda/test/include/: args.h  check.h  check_r.h  common.h
cuda/test/level2/: bsrsv2_r_f64_test.cu  gemvi_c_f64_test.cu  gemvi_r_f64_test.cu  spmv_bsr_c_f32_test.cu  spmv_bsr_r_f32_test.cu  spmv_bsrx_c_f64_test.cu  spmv_bsrx_r_f32_test.cu  spmv_bsrx_r_f64_test.cu  spmv_coo_c_f32_test.cu  spmv_coo_r_bf16_test.cu  spmv_coo_r_f16_test.cu  spmv_coo_r_f32_test.cu  spmv_csc_c_f32_test.cu  spmv_csc_r_f16_f32_test.cu  spmv_csc_r_f64_test.cu  spmv_csr_c_f32_test.cu  spmv_csr_r_f16_f32_test.cu  spmv_csr_r_f16_test.cu  spmv_csr_r_f32_test_metrics.cu  spmv_csr_r_f32_trans_test.cu  spsv_coo_c_f32_n_up_test.cu  spsv_coo_c_f32_test_metrics.cu  spsv_coo_c_f64_test_metrics.cu  spsv_coo_r_f32_test_metrics.cu  spsv_coo_r_f32_u_up_test.cu  spsv_coo_r_f64_test_metrics.cu  spsv_coo_r_f64_u_lo_test.cu  spsv_csr_c_f32_test_metrics.cu  spsv_csr_c_f64_test_metrics.cu  spsv_csr_c_f64_u_up_test.cu  spsv_csr_r_f32_n_lo_test.cu  spsv_csr_r_f32_test_metrics.cu  spsv_csr_r_f64_test_metrics.cu
cuda/test/level3/: bsrmm_r_f32_test.cu  sddmm_csr_col_c_f32.cu  sddmm_csr_col_r_f32.cu  spgemm_csr_c_bf16_test.cu  spgemm_csr_c_f64_test.cu  spgemm_csr_r_bf16_test.cu  spgemm_csr_r_f32_test.cu  spgemm_csr_r_f64_test.cu  (+48 more)
cuda/util/: handle.cu
dcu/: CMakeLists.txt
dcu/format/: CMakeLists.txt  alphasparse_export_csr.cpp  export_csr.hpp
dcu/kernel/: CMakeLists.txt
dcu/test/: CMakeLists.txt  args.cpp  io.cpp  test_common.cpp
dcu/util/: handle.cpp  malloc_dcu.cpp
hip/: CMakeLists.txt
hip/format/: alphasparseXcsr2bsr.h  alphasparse_create_csr.h  bell2coo.h  coo2bell.h  coo2csr.h  coo2csr.hip  coo_order.h  csc2csr.h  csr2csc.h  transpose_conj_dn_mat.h  transpose_coo.h  transpose_csc.h  transpose_csr.h  transpose_dn_mat.h
hip/kernel/: CMakeLists.txt
hip/test/: CMakeLists.txt  args.hip  check.hip  check_r.hip  io.hip
hip/util/: auxiliary.hip  handle.hip  malloc.hip  simplelist.hip
hygon/: CMakeLists.txt
hygon/format/: alphasparse_create_coo.cpp  alphasparse_destroy.cpp  alphasparse_export_csc.cpp  coo_order.hpp  create_coo.hpp
hygon/kernel/: CMakeLists.txt
hygon/test/: CMakeLists.txt  io.cpp  test_common.cpp
hygon/util/: malloc.cpp  simplelist.cpp  vec_dot.hpp
tool/: cmp_coo.py  (+11 more)
(+1137 files in other folders)
