cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
project("AlphaSparseLib" LANGUAGES CXX C)
set (CMAKE_CXX_STANDARD 17)

set(CMAKE_BUILD_TYPE Debug)

option(ALPHA_BUILD_CUDA "Compile kernels for NVIDIA GPUs" ${ALPHA_HAS_CUDA})
option(ALPHA_BUILD_HIP "Compile kernels for AMD or NVIDIA GPUs" ${ALPHA_HAS_HIP})
option(ALPHA_BUILD_HYGON "Compile kernels for Hygon CPUs" ${ALPHA_HAS_HYGON})
option(ALPHA_BUILD_ARM "Compile kernels for ARM CPUs" ${ALPHA_HAS_ARM})
option(ALPHA_BUILD_REFERENCE "Compile serial kernels for x86 CPUs" ${ALPHA_HAS_REF})

if(ALPHA_BUILD_CUDA)
    enable_language(CUDA)
    find_package(CUDAToolkit)
    set (CUDA_ARCH 70)
    add_definitions(-D__CUDA__)
    add_subdirectory(cuda)    
    string(APPEND CMAKE_CUDA_FLAGS " -gencode=arch=compute_70,code=sm_70")
    string(APPEND CMAKE_CUDA_FLAGS "  -Xcompiler -Wall -fPIC -D_FORCE_INLINES --expt-extended-lambda -use_fast_math --expt-relaxed-constexpr")
endif()
if(ALPHA_BUILD_HIP)    
    enable_language(HIP)
    set (HIP_ARCH 70)
    add_definitions(-D__HIP__)
    set(__HIP_PLATFORM_HCC__ 1)    
    find_package(hip REQUIRED)
    find_package(hipsparse REQUIRED)
    find_package(rocprim REQUIRED)
    find_package(rccl REQUIRED)
    find_package(rocsparse REQUIRED)
    include_directories(${HIP_INCLUDE_DIRS})
    add_subdirectory(hip)
endif()
if(ALPHA_BUILD_DCU)    
    enable_language(HIP)
    find_package(HIP REQUIRED)
    include_directories(${HIP_INCLUDE_DIRS})
    set (HIP_ARCH 70)
    set(CMAKE_CXX_COMPILER hipcc)
    add_definitions(-D__DCU__)
    set(__HIP_PLATFORM_HCC__ 1)      
    find_package(hipsparse REQUIRED)
    find_package(rocprim REQUIRED)
    find_package(rccl REQUIRED)
    find_package(rocsparse REQUIRED)
    add_subdirectory(dcu)
endif()
if(ALPHA_BUILD_HYGON)    
    if(ALPHA_BUILD_MKL_ENABLE)
        add_definitions(-D__MKL__)  
    endif()
    add_definitions(-D__HYGON__)    
    enable_language(C ASM)
    find_package(OpenMP REQUIRED)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")    
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    set(CMAKE_CXX_EXTENSIONS OFF)
    add_subdirectory(hygon)
endif()
if(ALPHA_BUILD_ARM)    
    add_definitions(-D__ARM__)    
    enable_language(C ASM)
    find_package(OpenMP REQUIRED)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    set(CMAKE_CXX_EXTENSIONS OFF)
    add_subdirectory(arm)
endif()
# if(ALPHA_BUILD_REFERENCE)    
#     add_definitions(-D__PLAIN__)    
#     add_definitions(-D__MKL__)  
#     find_package(OpenMP REQUIRED)
#     set(CMAKE_CXX_STANDARD_REQUIRED ON)
#     set(CMAKE_CXX_EXTENSIONS OFF)
#     add_subdirectory(plain)
# endif()
