function(add_alphasparse_example TEST_SOURCE)
  get_filename_component(TEST_TARGET ${TEST_SOURCE} NAME_WE)
  add_executable(${TEST_TARGET} ${TEST_SOURCE})
  target_compile_definitions(${TEST_TARGET} PUBLIC __CUDA_NO_HALF2_OPERATORS__)
  target_compile_definitions(${TEST_TARGET} PUBLIC CUDA_ARCH=${CUDA_ARCH})
  set_property(TARGET ${TEST_TARGET} PROPERTY CUDA_ARCHITECTURES ${CUDA_ARCH})
  # Target compile options
#   target_compile_options(${TEST_TARGET} PRIVATE -Wno-unused-command-line-argument)

  # Include common client headers
  target_include_directories(${TEST_TARGET} PRIVATE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)

  # Linker dependencies
  target_link_libraries(${TEST_TARGET} PUBLIC
      CUDA::cudart
      CUDA::cudart_static
      CUDA::cusparse
      CUDA::cusparse_static
      alphasparse
    )
  # Target properties
#   set_target_properties(${TEST_TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/staging")
endfunction()
if (${CUDA_ARCH} GREATER_EQUAL 80)
  add_alphasparse_example(generic/axpby_r_bf16_test.cu)
  add_alphasparse_example(generic/axpby_c_bf16_test.cu)
  add_alphasparse_example(generic/spvv_r_bf16_test.cu)
  add_alphasparse_example(generic/spvv_c_bf16_test.cu)
  add_alphasparse_example(generic/rot_c_bf16_test.cu)
  add_alphasparse_example(generic/rot_r_bf16_test.cu)
  add_alphasparse_example(generic/gather_r_bf16_test.cu)
  add_alphasparse_example(generic/scatter_r_bf16_test.cu)
  add_alphasparse_example(generic/scatter_c_bf16_test.cu)
  add_alphasparse_example(generic/gather_c_bf16_test.cu)
  add_alphasparse_example(level2/spmv_coo_r_bf16_test.cu)
  add_alphasparse_example(level2/spmv_coo_c_bf16_test.cu)
  add_alphasparse_example(level2/spmv_csr_r_bf16_test.cu)
  add_alphasparse_example(level2/spmv_csr_c_bf16_test.cu)
  add_alphasparse_example(level2/spmv_csc_r_bf16_test.cu)
  add_alphasparse_example(level2/spmv_csc_c_bf16_test.cu)
  add_alphasparse_example(level3/spgemm_csr_r_bf16_test.cu)
  add_alphasparse_example(level3/spgemm_csr_c_bf16_test.cu)
  add_alphasparse_example(level3/spgemm_reuse_csr_r_bf16_test.cu)
  add_alphasparse_example(level3/spgemm_reuse_csr_c_bf16_test.cu)
endif()

add_alphasparse_example(generic/axpby_r_f16_test.cu)
add_alphasparse_example(generic/axpby_r_f32_test.cu)
add_alphasparse_example(generic/axpby_r_f64_test.cu)
# add_alphasparse_example(generic/axpby_c_f16_test.cu)
add_alphasparse_example(generic/axpby_c_f32_test.cu)
add_alphasparse_example(generic/axpby_c_f64_test.cu)
add_alphasparse_example(generic/spvv_r_i8_test.cu)
add_alphasparse_example(generic/spvv_r_i8_f32_test.cu)
add_alphasparse_example(generic/spvv_r_f16_test.cu)
add_alphasparse_example(generic/spvv_r_f32_test.cu)
add_alphasparse_example(generic/spvv_r_f64_test.cu)
add_alphasparse_example(generic/spvv_c_f16_test.cu)
add_alphasparse_example(generic/spvv_c_f32_test.cu)
add_alphasparse_example(generic/spvv_c_f64_test.cu)
add_alphasparse_example(generic/rot_c_f16_test.cu)
add_alphasparse_example(generic/rot_c_f32_test.cu)
add_alphasparse_example(generic/rot_c_f64_test.cu)
add_alphasparse_example(generic/rot_r_f16_test.cu)
add_alphasparse_example(generic/rot_r_f32_test.cu)
add_alphasparse_example(generic/rot_r_f64_test.cu)
add_alphasparse_example(generic/scatter_r_f32_test.cu)
add_alphasparse_example(generic/scatter_r_f64_test.cu)
add_alphasparse_example(generic/scatter_r_f16_test.cu)
add_alphasparse_example(generic/scatter_c_f16_test.cu)
add_alphasparse_example(generic/scatter_c_f32_test.cu)
add_alphasparse_example(generic/scatter_c_f64_test.cu)
add_alphasparse_example(generic/gather_c_f16_test.cu)
add_alphasparse_example(generic/gather_c_f32_test.cu)
add_alphasparse_example(generic/gather_c_f64_test.cu)
add_alphasparse_example(generic/gather_r_f16_test.cu)
add_alphasparse_example(generic/gather_r_f32_test.cu)
add_alphasparse_example(generic/gather_r_f64_test.cu)
add_alphasparse_example(level2/spmv_coo_r_f32_test.cu)
add_alphasparse_example(level2/spmv_coo_r_f64_test.cu)
add_alphasparse_example(level2/spmv_coo_c_f32_test.cu)
add_alphasparse_example(level2/spmv_coo_c_f64_test.cu)
add_alphasparse_example(level2/spmv_coo_r_f16_test.cu)
add_alphasparse_example(level2/spmv_coo_c_f16_test.cu)
add_alphasparse_example(level2/spmv_coo_r_i8_f32_test.cu)
add_alphasparse_example(level2/spmv_coo_r_i8_i32_test.cu)
add_alphasparse_example(level2/spmv_coo_r_f16_f32_test.cu)
add_alphasparse_example(level2/spmv_csr_r_f32_test.cu)
add_alphasparse_example(level2/spmv_csr_r_f64_test.cu)
add_alphasparse_example(level2/spmv_csr_c_f32_test.cu)
add_alphasparse_example(level2/spmv_csr_c_f64_test.cu)
add_alphasparse_example(level2/spmv_csr_r_i8_i32_test.cu)
add_alphasparse_example(level2/spmv_csr_r_i8_f32_test.cu)
add_alphasparse_example(level2/spmv_csr_r_f16_f32_test.cu)
add_alphasparse_example(level2/spmv_csr_r_f16_test.cu)
add_alphasparse_example(level2/spmv_csr_c_f16_test.cu)
add_alphasparse_example(level2/spmv_csr_r_f32_trans_test.cu)
add_alphasparse_example(level2/spmv_bsr_r_f32_test.cu)
add_alphasparse_example(level2/spmv_bsr_r_f64_test.cu)
add_alphasparse_example(level2/spmv_bsr_c_f32_test.cu)
add_alphasparse_example(level2/spmv_bsr_c_f64_test.cu)
add_alphasparse_example(level2/spmv_bsrx_r_f32_test.cu)
add_alphasparse_example(level2/spmv_bsrx_r_f64_test.cu)
add_alphasparse_example(level2/spmv_bsrx_c_f32_test.cu)
add_alphasparse_example(level2/spmv_bsrx_c_f64_test.cu)
add_alphasparse_example(level2/bsrsv2_r_f32_test.cu)
add_alphasparse_example(level2/bsrsv2_r_f64_test.cu)
add_alphasparse_example(level2/bsrsv2_c_f32_test.cu)
add_alphasparse_example(level2/bsrsv2_c_f64_test.cu)
add_alphasparse_example(level2/spmv_csc_r_f32_test.cu)
add_alphasparse_example(level2/spmv_csc_r_f64_test.cu)
add_alphasparse_example(level2/spmv_csc_c_f32_test.cu)
add_alphasparse_example(level2/spmv_csc_c_f64_test.cu)
add_alphasparse_example(level2/spmv_csc_r_f16_test.cu)
add_alphasparse_example(level2/spmv_csc_c_f16_test.cu)
add_alphasparse_example(level2/spmv_csc_r_i8_f32_test.cu)
add_alphasparse_example(level2/spmv_csc_r_i8_i32_test.cu)
add_alphasparse_example(level2/spmv_csc_r_f16_f32_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f32_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f32_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f32_u_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f32_n_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f64_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f64_n_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f64_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_r_f64_u_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f32_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f32_n_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f32_u_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f32_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f64_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f64_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f64_n_up_test.cu)
# add_alphasparse_example(level2/spsv_csr_c_f64_u_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f32_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f32_n_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f32_u_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f32_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f64_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f64_n_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f64_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_r_f64_u_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f32_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f32_n_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f32_u_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f32_u_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f64_n_lo_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f64_n_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f64_u_up_test.cu)
# add_alphasparse_example(level2/spsv_coo_c_f64_u_lo_test.cu)
add_alphasparse_example(level2/gemvi_r_f32_test.cu)
add_alphasparse_example(level2/gemvi_r_f64_test.cu)
add_alphasparse_example(level2/gemvi_c_f32_test.cu)
add_alphasparse_example(level2/gemvi_c_f64_test.cu)
add_alphasparse_example(level3/bsrmm_r_f32_test.cu)
add_alphasparse_example(level3/bsrmm_r_f64_test.cu)
add_alphasparse_example(level3/bsrmm_c_f32_test.cu)
add_alphasparse_example(level3/bsrmm_c_f64_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_col_c_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_col_c_f64_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_f64_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_i8_i32_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_i8_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_f16_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_col_r_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_csr_col_c_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_csr_row_r_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_row_c_f32_test.cu)
add_alphasparse_example(level3/spmm_csr_row_c_f64_test.cu)
add_alphasparse_example(level3/spmm_csr_row_r_f64_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_i8_i32_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_i8_f32_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_csc_col_c_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_f16_f32_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_f32_test.cu)
add_alphasparse_example(level3/spmm_csc_col_r_f64_test.cu)
add_alphasparse_example(level3/spmm_csc_col_c_f32_test.cu)
add_alphasparse_example(level3/spmm_csc_col_c_f64_test.cu)
add_alphasparse_example(level3/spmm_coo_r_f32_test.cu)
add_alphasparse_example(level3/spmm_coo_r_f64_test.cu)
add_alphasparse_example(level3/spmm_coo_c_f32_test.cu)
add_alphasparse_example(level3/spmm_coo_c_f64_test.cu)
add_alphasparse_example(level3/spmm_coo_r_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_coo_r_f16_f32_test.cu)
add_alphasparse_example(level3/spmm_coo_c_f16_f16_test.cu)
add_alphasparse_example(level3/spmm_coo_r_i8_f32_test.cu)
add_alphasparse_example(level3/spmm_coo_r_i8_i32_test.cu)
add_alphasparse_example(level3/bsrsm_r_f32_test.cu)
add_alphasparse_example(level3/bsrsm_r_f64_test.cu)
add_alphasparse_example(level3/bsrsm_c_f32_test.cu)
add_alphasparse_example(level3/bsrsm_c_f64_test.cu)
add_alphasparse_example(level3/spsm_csr_r_f32_test.cu)
add_alphasparse_example(level3/spsm_csr_r_f64_test.cu)
add_alphasparse_example(level3/spsm_csr_c_f32_test.cu)
add_alphasparse_example(level3/spsm_csr_c_f64_test.cu)
add_alphasparse_example(level3/spsm_coo_r_f32_test.cu)
add_alphasparse_example(level3/spsm_coo_c_f32_test.cu)
add_alphasparse_example(level3/spsm_coo_r_f64_test.cu)
add_alphasparse_example(level3/spsm_coo_c_f64_test.cu)
add_alphasparse_example(level3/spmm_bell_r_f32_test.cu)
add_alphasparse_example(level3/spmm_bell_r_f32_test_example.cu)
add_alphasparse_example(level3/spmm_bell_r_f64_test.cu)
add_alphasparse_example(level3/spmm_bell_c_f32_test.cu)
add_alphasparse_example(level3/spmm_bell_c_f64_test.cu)
# add_alphasparse_example(level3/spmm_bell_r_f16_test.cu)
# add_alphasparse_example(level3/spmm_bell_r_bf16_test.cu)
# add_alphasparse_example(level3/spmm_bell_r_i8_test.cu)
# add_alphasparse_example(level3/spmm_bell_r_f16_f32_test.cu)
# add_alphasparse_example(extra/csrgeam2_r_f32_test.cu)
# add_alphasparse_example(extra/csrgeam2_r_f64_test.cu)
# add_alphasparse_example(extra/csrgeam2_c_f32_test.cu)
# add_alphasparse_example(extra/csrgeam2_c_f64_test.cu)
# add_alphasparse_example(level3/spgemm_csr_r_f16_test.cu)
# add_alphasparse_example(level3/spgemm_csr_c_f16_test.cu)
add_alphasparse_example(level3/spgemm_csr_r_f32_test.cu)
add_alphasparse_example(level3/spgemm_csr_c_f32_test.cu)
add_alphasparse_example(level3/spgemm_csr_r_f64_test.cu)
add_alphasparse_example(level3/spgemm_csr_c_f64_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_r_f32_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_c_f32_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_r_f64_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_c_f64_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_r_f16_test.cu)
# add_alphasparse_example(level3/spgemm_reuse_csr_c_f16_test.cu)
add_alphasparse_example(level3/sddmm_csr_col_r_f32.cu)
add_alphasparse_example(level3/sddmm_csr_col_r_f64.cu)
add_alphasparse_example(level3/sddmm_csr_col_c_f32.cu)
add_alphasparse_example(level3/sddmm_csr_col_c_f64.cu)
add_alphasparse_example(precond/csric02_r32_test.cu)
add_alphasparse_example(precond/csric02_r64_test.cu)
add_alphasparse_example(precond/csric02_c32_test.cu)
add_alphasparse_example(precond/csric02_c64_test.cu)
add_alphasparse_example(precond/csrilu02_r32_test.cu)
add_alphasparse_example(precond/csrilu02_c32_test.cu)
add_alphasparse_example(precond/csrilu02_r64_test.cu)
add_alphasparse_example(precond/csrilu02_c64_test.cu)
add_alphasparse_example(precond/bsrilu02_r32_test.cu)
add_alphasparse_example(precond/bsrilu02_r64_test.cu)
add_alphasparse_example(precond/bsrilu02_c32_test.cu)
add_alphasparse_example(precond/bsrilu02_c64_test.cu)
add_alphasparse_example(precond/bsric02_r32_test.cu)
add_alphasparse_example(precond/bsric02_r64_test.cu)
add_alphasparse_example(precond/bsric02_c32_test.cu)
add_alphasparse_example(precond/bsric02_c64_test.cu)
add_alphasparse_example(precond/gtsv2_r32_test.cu)
add_alphasparse_example(precond/gtsv2_r64_test.cu)
add_alphasparse_example(precond/gtsv2_c32_test.cu)
add_alphasparse_example(precond/gtsv2_c64_test.cu)
add_alphasparse_example(precond/gtsv2_nopivot_r32_test.cu)
add_alphasparse_example(precond/gtsv2_nopivot_r64_test.cu)
add_alphasparse_example(precond/gtsv2_nopivot_c32_test.cu)
add_alphasparse_example(precond/gtsv2_nopivot_c64_test.cu)
add_alphasparse_example(precond/gtsv2_strided_batch_r32_test.cu)
add_alphasparse_example(precond/gtsv2_strided_batch_r64_test.cu)
add_alphasparse_example(precond/gtsv2_strided_batch_c32_test.cu)
add_alphasparse_example(precond/gtsv2_strided_batch_c64_test.cu)
add_alphasparse_example(precond/gtsv_interleaved_batch_r32_test.cu)
add_alphasparse_example(precond/gtsv_interleaved_batch_r64_test.cu)
add_alphasparse_example(precond/gtsv_interleaved_batch_c32_test.cu)
add_alphasparse_example(precond/gtsv_interleaved_batch_c64_test.cu)
add_alphasparse_example(precond/gpsv_r32_test.cu)
add_alphasparse_example(precond/gpsv_r64_test.cu)
add_alphasparse_example(precond/gpsv_c32_test.cu)
add_alphasparse_example(precond/gpsv_c64_test.cu)
add_alphasparse_example(reordering/csrcolor_r32_test.cu)
add_alphasparse_example(reordering/csrcolor_r64_test.cu)
add_alphasparse_example(reordering/csrcolor_c32_test.cu)
add_alphasparse_example(reordering/csrcolor_c64_test.cu)

# add_alphasparse_example(level2/spmv_csr_r_f32_test.cu)
# add_alphasparse_example(level2/spmv_csr_c_f32_test.cu)
# add_alphasparse_example(level2/spmv_csr_r_f64_test.cu)
# add_alphasparse_example(level2/spmv_csr_c_f64_test.cu)

add_alphasparse_example(level2/spmv_csr_r_f32_test_metrics.cu)
add_alphasparse_example(level2/spmv_csr_r_f64_test_metrics.cu)
add_alphasparse_example(level2/spmv_csr_c_f32_test_metrics.cu)
add_alphasparse_example(level2/spmv_csr_c_f64_test_metrics.cu)

add_alphasparse_example(level2/spsv_csr_r_f64_test_metrics.cu)
add_alphasparse_example(level2/spsv_csr_r_f32_test_metrics.cu)
add_alphasparse_example(level2/spsv_csr_c_f64_test_metrics.cu)
add_alphasparse_example(level2/spsv_csr_c_f32_test_metrics.cu)

add_alphasparse_example(level2/spsv_coo_r_f64_test_metrics.cu)
add_alphasparse_example(level2/spsv_coo_r_f32_test_metrics.cu)
add_alphasparse_example(level2/spsv_coo_c_f64_test_metrics.cu)
add_alphasparse_example(level2/spsv_coo_c_f32_test_metrics.cu)
